# wukong-invite-helper

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  start.bat  start.command
scripts/: snatch_invite.sh
src/wukong_invite/: __init__.py  autofill.py  cli.py  core.py  notify.py  ocr.py  ops.py  webui.py
tests/: test_core.py
tools/: vision_ocr.m
