[project]
name = "wukong-invite-helper"
version = "0.1.0"
description = "Monitor the direct Wukong invite API, copy invite codes, and optionally autofill the Wukong app."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
autofill = ["pyautogui"]

[project.urls]
Homepage = "https://github.com/LeoLB-Wang/wukong-invite-helper"
Repository = "https://github.com/LeoLB-Wang/wukong-invite-helper"

[project.scripts]
wukong-invite-webui = "wukong_invite.webui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
